# recruiting-tool

./: .example.env  .gitignore  Example Awnsers.md  README.md  architecture.drawio  default.nix
backend/: Dockerfile  open-positions.json  pyproject.toml  schema_cv.json
backend/src/backend/: agent.py  conf.py  database.py  main.py  models.py
docker/: compose.yaml
docker/mongoDB/: WiredTiger.turtle  WiredTiger.wt  _mdb_catalog.wt  collection-0-11204885800262682811.wt  collection-2-11204885800262682811.wt  collection-29-11204885800262682811.wt  collection-32-11204885800262682811.wt  collection-35-11204885800262682811.wt  collection-4-11204885800262682811.wt  index-1-11204885800262682811.wt  index-3-11204885800262682811.wt  index-30-11204885800262682811.wt  index-31-11204885800262682811.wt  index-33-11204885800262682811.wt  index-34-11204885800262682811.wt  index-36-11204885800262682811.wt  index-5-11204885800262682811.wt  index-6-11204885800262682811.wt  sizeStorer.wt
docker/mongoDB/diagnostic.data/: metrics.2025-06-23T13-11-35Z-00000
docker/proxy/: nginx.conf
frontend/: .eslintrc.cjs  Dockerfile  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
frontend/app/: flashhire-landing.tsx  layout.tsx  loading-button.tsx  offerings.tsx  open-question.tsx  page.tsx  personality-test-section.tsx  typewriter.tsx
frontend/app/api-client/: api.ts  base.ts
frontend/src/: App.css  App.tsx  index.css  main.tsx
frontend/src/components/: CvUploadForm.tsx  FileUpload.tsx  JobCard.tsx  JobRecommendations.tsx  LikertScaleInput.tsx  (+8 more)
(+45 files in other folders)
