[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [{ name = "Felix Schaar", email = "felix.schaar@tum.de" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.115.13,<0.116.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "uvicorn (>=0.34.3,<0.35.0)",
    "pymongo (>=4.13.2,<5.0.0)",
]

[tool.poetry]
packages = [{ include = "backend", from = "src" }]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
start = "backend.main:start"
